traying to understand the data and the problem, i have not preprossed the data yet

--- a/Data Understanding.ipynb
+++ b/Data Understanding.ipynb
@@ -42,6 +42,236 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "path_checkins = \"datasets/Gowalla_totalCheckins.txt\"\n",
+    "path_edges = \"datasets/Gowalla_edges.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_edges = pd.read_csv(path_edges, sep=\"\\t\", header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1\n",
+       "0  0  1\n",
+       "1  0  2\n",
+       "2  0  3\n",
+       "3  0  4\n",
+       "4  0  5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_edges.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del data_checkins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_checkins = pd.read_csv(path_checkins, sep=\"\\t\", header=None)\n",
+    "data_checkins.columns = [\"user\", \"check-in time\", \"latitude\", \"longitude\", \"location id\"]\n",
+    "data_checkins.set_index(\"user\", inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>check-in time</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>location id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-10-19T23:55:27Z</td>\n",
+       "      <td>30.235909</td>\n",
+       "      <td>-97.795140</td>\n",
+       "      <td>22847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-10-18T22:17:43Z</td>\n",
+       "      <td>30.269103</td>\n",
+       "      <td>-97.749395</td>\n",
+       "      <td>420315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-10-17T23:42:03Z</td>\n",
+       "      <td>30.255731</td>\n",
+       "      <td>-97.763386</td>\n",
+       "      <td>316637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-10-17T19:26:05Z</td>\n",
+       "      <td>30.263418</td>\n",
+       "      <td>-97.757597</td>\n",
+       "      <td>16516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-10-16T18:50:42Z</td>\n",
+       "      <td>30.274292</td>\n",
+       "      <td>-97.740523</td>\n",
+       "      <td>5535878</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             check-in time   latitude  longitude  location id\n",
+       "user                                                         \n",
+       "0     2010-10-19T23:55:27Z  30.235909 -97.795140        22847\n",
+       "0     2010-10-18T22:17:43Z  30.269103 -97.749395       420315\n",
+       "0     2010-10-17T23:42:03Z  30.255731 -97.763386       316637\n",
+       "0     2010-10-17T19:26:05Z  30.263418 -97.757597        16516\n",
+       "0     2010-10-16T18:50:42Z  30.274292 -97.740523      5535878"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_checkins.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis: \n",
+    "\n",
+    "- I think I just need the information of the \"user id\" the \"check-in time\" and the \"location id\". from checkin dataset\n",
+    "- I will delete the \"latitude\" and \"longitude\" columns.\n",
+    "- After that i will apply a pre-processing of the data, for delete missing samples if there is some missing or strange value. \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
