--- a/stalker_challenge.ipynb
+++ b/stalker_challenge.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# <b> <h3> <em>Script and Macine characteristics</em> </h3></b>\n",
+    "# <b> <h3> <em>Script and Machine characteristics</em> </h3></b>\n",
     "\n",
     "<p style=\"text-align:justify\">\n",
     "    This project will be implemented with PIP-8 style guide of python, I will evaluate computation time, size in memory, if it is possible, I will implement concurrency. The computer in which this scrip will be developed has a CPU intel core i5 of third generation with four threads and 2.5 Gz, 8GB of RAM, standard hard-disk of 512GB,  executing Ubuntu 16.04.\n",
@@ -69,7 +69,7 @@
    "source": [
     "import pandas as pd \n",
     "\n",
-    "PATH_CHECKINGS = \"datasets/Gowalla_totalCheckins.txt\"\n",
+    "PATH_CHECKINS = \"datasets/Gowalla_totalCheckins.txt\"\n",
     "PATH_EDGES = \"datasets/Gowalla_edges.txt\""
    ]
   },
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_checkins = pd.read_csv(PATH_CHECKINGS, sep=\"\\t\", header=None)\n",
+    "data_checkins = pd.read_csv(PATH_CHECKINS, sep=\"\\t\", header=None)\n",
     "data_checkins.columns = [\"user\", \"check-in time\", \"latitude\", \"longitude\", \"location id\"]\n",
     "data_checkins.set_index(\"location id\", inplace = True)"
    ]
@@ -556,7 +556,7 @@
    "source": [
     "<p> There is not missing values in both datasets, so we can continue.\n",
     "\n",
-    "I think we can reduce even more the datasets size.\n",
+    "I think we can reduce even more the size of the datasets.\n",
     "</p>"
    ]
   },
@@ -566,7 +566,7 @@
    "source": [
     "## 2.4 sparse matrix\n",
     "\n",
-    "<p style=\"text-align:justify\"> To solve our challenge we can implemnt sparce matrices, with help of dicts.</p> \n",
+    "<p style=\"text-align:justify\"> To solve our challenge we can implemnt sparse matrices, with help of dicts.</p> \n",
     "     "
    ]
   },
@@ -576,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SparceMatrix:\n",
+    "class SparseMatrix:\n",
     "    \"\"\" \n",
     "    \n",
     "    Object for manage big matrices\n",
@@ -672,7 +672,7 @@
    "source": [
     "# 2.5 transforming representation of data\n",
     "\n",
-    "<p style=\"text-align:justify\"> Now, that we have our class SparceMatrix we can represent our datasets: Checkins and friendship network, and our result set: stalker_classification, in this data structure. It definetly will reduce the size in RAM of our datasets and it will provide more performance in our <b><em>step 3. Processing.</em></b></p>"
+    "<p style=\"text-align:justify\"> Now, that we have our class SparseMatrix we can represent our datasets: Checkins and friendship network, and our result set: stalker_classification, in this data structure. It definetly will reduce the size in RAM of our datasets and it will provide more performance in our <b><em>step 3. Processing.</em></b></p>"
    ]
   },
   {
@@ -683,7 +683,7 @@
     "\n",
     "<p style=\"text-align:justify\"> For this transformation let's make some asumptions:\n",
     "    <ul>\n",
-    "        <li>based on the definition of the challenger: <em>\"stalker is someone who, in this dataset, visits some of the same locations as another person, after the other person goes to that location.\"</em>  we could say that there is not timestap defined, in this way we could say that if the person <em>A</em> went to the place <em>X</em> the 01/01/2020 and the person <em>B</em> went to the same place the 05/01/2020 B will be considered has staleker of <em>A</em>. It means that while: $$A_{date}(X) < B_{date}(X) \\implies (A,B) = 1 $$\n",
+    "        <li>based on the definition of the challenger: <em>\"stalker is someone who, in this dataset, visits some of the same locations as another person, after the other person goes to that location.\"</em>  we could say that there is not timestamp defined, in this way we could say that if the person <em>A</em> went to the place <em>X</em> the 01/01/2020 and the person <em>B</em> went to the same place the 05/01/2020 B will be considered has stalker of <em>A</em>. It means that while: $$A_{date}(X) < B_{date}(X) \\implies (A,B) = 1 $$\n",
     "this is valid for each place</li>\n",
     "        <li>\n",
     "            Using the previous assumption we could say that for our analysis we only need at most two dates for each user over one place: the first date that the user has visted the place and the last date, obviously there are users that has visited a certain place just one time, in this case we will use just one date. It will reduce the size of our dataset, because there are user that are made chekin more than two times in the same place, for example in their jobs. \n",
@@ -713,7 +713,7 @@
    "outputs": [],
    "source": [
     "#first create our sparse matrix \n",
-    "locations_chekins = SparceMatrix()"
+    "locations_chekins = SparseMatrix()"
    ]
   },
   {
@@ -776,11 +776,11 @@
     "                    #extract the first and last date\n",
     "                    first_date = user_dates[\"check-in time\"].min()\n",
     "                    last_date = user_dates[\"check-in time\"].max()\n",
-    "                    #lets add this register to our SparceMatrix\n",
+    "                    #lets add this register to our SparseMatrix\n",
     "                    locations_chekins.append([first_date,last_date], location_id, user_id)\n",
     "                else:\n",
     "                    date = user_dates[\"check-in time\"]\n",
-    "                    #lets add this register to our SparceMatrix\n",
+    "                    #lets add this register to our SparseMatrix\n",
     "                    locations_chekins.append(date, location_id, user_id)\n",
     "        else:\n",
     "            pass\n",
@@ -885,7 +885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> we could see that from our initial size of 700 MB we have reduce it until 20 MB it is a reduction of 97.15%. For the other hand the pre processing has taken arround 43 minutes, let see if we could implement concurrency to reduce this time and get the same result</p>"
+    "<p> we could see that from our initial size of 700 MB we have reduce it until 20 MB it is a reduction of 97.15%. For the other hand the pre processing has taken arround 43 minutes, let see if we could implement concurrence to reduce this time and get the same result</p>"
    ]
   },
   {
@@ -907,11 +907,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we will use this  function for the concurrency\n",
+    "# we will use this  function for the concurrence\n",
     "def split_list(array, n_splits = 4):\n",
     "    \"\"\" this function split a lsit in almost equal parts\"\"\"\n",
     "    \n",
@@ -942,7 +942,7 @@
     "    of a user that has visted a place \n",
     "    \"\"\"\n",
     "    \n",
-    "    temp = SparceMatrix()\n",
+    "    temp = SparseMatrix()\n",
     "    \n",
     "    for location_id in loc_ids:\n",
     "        #select the users and dates\n",
@@ -965,11 +965,11 @@
     "                        #extract the first and last date\n",
     "                        first_date = user_dates[\"check-in time\"].min()\n",
     "                        last_date = user_dates[\"check-in time\"].max()\n",
-    "                        #lets add this register to our SparceMatrix\n",
+    "                        #lets add this register to our SparseMatrix\n",
     "                        temp.append([first_date,last_date], location_id, user_id)\n",
     "                    else:\n",
     "                        date = user_dates[\"check-in time\"]\n",
-    "                        #lets add this register to our SparceMatrix\n",
+    "                        #lets add this register to our SparseMatrix\n",
     "                        temp.append(date, location_id, user_id)\n",
     "            else:\n",
     "                pass\n",
@@ -989,8 +989,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lets create te sparce matrix for concurrency\n",
-    "concurrency_locations_chekins = SparceMatrix()"
+    "#lets create the sparse matrix for concurrency\n",
+    "concurrency_locations_chekins = SparseMatrix()"
    ]
   },
   {
@@ -1067,7 +1067,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We see that we could have the same result in almost te middle of the time, i think that whit a graphic card it could be even faster"
+    "### We see that we could have the same result in almost the middle of the time, i think that whit a graphic card it could be even faster"
    ]
   },
   {
@@ -1181,7 +1181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#let see the numebr of unique users\n",
+    "#let see the number of unique users\n",
     "users = data_edges.index.unique()"
    ]
   },
@@ -1212,10 +1212,10 @@
     "    \"\"\"\n",
     "    this function will be used for concurrency\n",
     "    \n",
-    "    it will return a sparece matrix with the \n",
+    "    it will return a sparese matrix with the \n",
     "    friend list of a certain number of users. \n",
     "    \"\"\"\n",
-    "    temp = SparceMatrix()\n",
+    "    temp = SparseMatrix()\n",
     "    for user_id in user_ids:\n",
     "        #friend of the user_id\n",
     "        user_friends = data_edges.loc[user_id]\n",
@@ -1245,7 +1245,7 @@
    "outputs": [],
    "source": [
     "# this matrix will be unidimensional\n",
-    "concurrency_friendship = SparceMatrix()"
+    "concurrency_friendship = SparseMatrix()"
    ]
   },
   {
@@ -1346,7 +1346,7 @@
     "</ul>\n",
     "\n",
     "<p>\n",
-    "    We will represent the result as a Sparce Matrix, the row_id will be the user that has been stalked (A), the col_id is te user that stalks (B), and the value is in how many locations the behaviour is the same. \n",
+    "    We will represent the result as a Sparse Matrix, the row_id will be the user that has been stalked (A), the col_id is te user that stalks (B), and the value is in how many locations the behaviour is the same. \n",
     "</p>"
    ]
   },
@@ -1356,7 +1356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stalker_score = SparceMatrix()"
+    "stalker_score = SparseMatrix()"
    ]
   },
   {
@@ -1377,7 +1377,7 @@
     "# Start the stopwatch / counter \n",
     "start = time.time()\n",
     "\n",
-    "# for each location id in the sparce matrix\n",
+    "# for each location id in the sparse matrix\n",
     "for location_id in concurrency_locations_chekins.get_index():\n",
     "    #select the user-chekins of this locations\n",
     "    users_location_checkins = concurrency_locations_chekins.get_row(location_id)\n",
