--- a/stalker_challenge.ipynb
+++ b/stalker_challenge.ipynb
@@ -1547,7 +1547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Presentation of the results:\n",
+    "# 4. introduction of the results:\n",
     "<p> To understand the resut, the first user has been stalked for the second a total time of the stalker score, i.e. the user <em>10410</em> has been stalked for his friend, the user <em>10393</em> with a total of 365 times in different locations</p>"
    ]
   },
